corrected text alignment...

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -122,7 +122,7 @@ input[type=text], select, textarea {
   }
 /* Portfolio starts here */
 
-.card-text {
+.card-text2 {
     text-align: center;
 }
 
